--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.4.2",
     "@types/axios": "^0.14.0",
+    "@types/currency-formatter": "^1.3.0",
     "@types/react-navigation": "^3.0.7",
     "@types/react-redux": "^7.0.9",
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
+    "currency-formatter": "^1.5.4",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
@@ -20,7 +22,8 @@
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
