--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
+    "react-native-admob": "^1.3.2",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-orientation": "^3.1.3",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
+    "recyclerlistview": "^1.3.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -31,6 +34,7 @@
     "@types/jest": "^24.0.13",
     "@types/react": "^16.8.19",
     "@types/react-native": "^0.57.60",
+    "@types/react-native-orientation": "^5.0.1",
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
