--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
-    "react-native-admob": "^1.3.2",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-orientation": "^3.1.3",
     "react-native-vector-icons": "^6.5.0",
@@ -35,6 +34,7 @@
     "@types/react": "^16.8.19",
     "@types/react-native": "^0.57.60",
     "@types/react-native-orientation": "^5.0.1",
+    "@types/react-native-sqlite-storage": "^3.3.1",
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
