--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@react-native-community/async-storage": "^1.4.2",
     "@types/axios": "^0.14.0",
     "@types/currency-formatter": "^1.3.0",
+    "@types/dateformat": "^3.0.0",
     "@types/react-navigation": "^3.0.7",
     "@types/react-redux": "^7.0.9",
     "@types/redux": "^3.6.0",
+    "@types/striptags": "^3.1.1",
     "axios": "^0.19.0",
     "currency-formatter": "^1.5.4",
+    "dateformat": "^3.0.3",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
@@ -25,7 +28,8 @@
     "react-redux": "^7.0.3",
     "recyclerlistview": "^1.3.4",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "striptags": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
