--- a/package.json
+++ b/package.json
@@ -7,20 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.4.2",
-    "@types/axios": "^0.14.0",
-    "@types/currency-formatter": "^1.3.0",
-    "@types/dateformat": "^3.0.0",
-    "@types/react-navigation": "^3.0.7",
-    "@types/react-redux": "^7.0.9",
-    "@types/redux": "^3.6.0",
-    "@types/striptags": "^3.1.1",
     "axios": "^0.19.0",
+    "ccxt": "^1.18.727",
     "currency-formatter": "^1.5.4",
     "dateformat": "^3.0.3",
     "native-base": "^2.12.1",
     "react": "16.8.3",
-    "react-native": "0.59.9",
+    "react-native": "^0.59.9",
     "react-native-admob": "^2.0.0-beta.5",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-orientation": "^3.1.3",
@@ -33,6 +26,14 @@
     "striptags": "^3.1.1"
   },
   "devDependencies": {
+    "@react-native-community/async-storage": "^1.4.2",
+    "@types/axios": "^0.14.0",
+    "@types/currency-formatter": "^1.3.0",
+    "@types/dateformat": "^3.0.0",
+    "@types/react-navigation": "^3.0.7",
+    "@types/react-redux": "^7.0.9",
+    "@types/redux": "^3.6.0",
+    "@types/striptags": "^3.1.1",
     "@babel/core": "^7.4.5",
     "@babel/runtime": "^7.4.5",
     "@types/jest": "^24.0.13",
