--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-native-admob": "^2.0.0-beta.5",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-orientation": "^3.1.3",
-    "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "recyclerlistview": "^1.3.4",
@@ -26,25 +25,27 @@
     "striptags": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/runtime": "^7.4.5",
     "@react-native-community/async-storage": "^1.4.2",
     "@types/axios": "^0.14.0",
     "@types/currency-formatter": "^1.3.0",
     "@types/dateformat": "^3.0.0",
-    "@types/react-navigation": "^3.0.7",
-    "@types/react-redux": "^7.0.9",
-    "@types/redux": "^3.6.0",
-    "@types/striptags": "^3.1.1",
-    "@babel/core": "^7.4.5",
-    "@babel/runtime": "^7.4.5",
     "@types/jest": "^24.0.13",
     "@types/react": "^16.8.19",
     "@types/react-native": "^0.57.60",
     "@types/react-native-orientation": "^5.0.1",
     "@types/react-native-sqlite-storage": "^3.3.1",
+    "@types/react-native-vector-icons": "^6.4.1",
+    "@types/react-navigation": "^3.0.7",
+    "@types/react-redux": "^7.0.9",
     "@types/react-test-renderer": "^16.8.1",
+    "@types/redux": "^3.6.0",
+    "@types/striptags": "^3.1.1",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
+    "react-native-vector-icons": "^6.5.0",
     "react-test-renderer": "16.8.3",
     "typescript": "^3.5.1"
   },
